# Pulpero

./: .gitignore  CMake.txt  CMakeLists.txt  Dockerfile  README.md  README_ES.md  docker_output  install.ps1  install.sh  install_linux.sh  lua_functions.lua  main.py  pulpero.h  pulpero_core.c  start.ps1  start.sh  start_linux.sh  test.sh
.github/workflows/: Deploy.yaml  buildLib.yaml  ci.yml
Pulpero/: Blind get clients.bru  Search.bru  bruno.json
adapters/vscode/: package.json  tsconfig.json
adapters/vscode/src/: chat-panel.ts  core-manager.ts  extension.ts  service.ts
core/: init.lua  main.py  model_runner.lua  parser.lua  setup.lua
core/managers/audio/: audio_manager.lua
core/managers/code_data_base/: manager.lua  processCode.py
core/managers/hints/: manager.py
core/managers/history/: manager.py  test_manager.py
core/managers/model/: manager.py  model_manager.lua  model_manager.py
core/managers/tool/: apply_buffer_edit.py  create_file.py  find_file.py  get_file.py  get_file_tree.py  list_directory.py  manager.py  test_create_file.py  test_find_file.py  test_get_file.py  test_manager.py  tool.py  tools.py  update_file.py  web_search.py
core/router/: router.py  test_router.py
core/runner/model/: model_runner.py  parser.py  prompts.py  test_model_runner.py
core/server/: data_model.py  methods.py  server.py  setup.py  socket_server.py  test_methods.py
core/socket/: methods.py  server.lua  server.py  setup.lua  setup.py  test_methods.py
core/util/: OSCommands.lua  OSCommands.py  String.lua  logger.py
lua/autodoc/: init.lua
lua/pulpero/: chat.lua  init.lua  lazy.lua  load_dep.lua  logger.lua  model_runner.lua  pairing.lua  parser.lua  realtime_feedback.lua  service_connector.lua  setup.lua  ui.lua  virtual_text.lua
lua/pulpero/core/: init.lua  json.lua  logger.lua  model_download.lua  model_manager.lua  model_runner.lua  parser.lua  prompts.lua  service.lua  setup.lua
lua/pulpero/core/managers/audio/: audio_manager.lua
lua/pulpero/core/managers/code_data_base/: processCode.py
lua/pulpero/core/managers/history/: manager.lua
lua/pulpero/core/managers/model/: model_manager.lua
lua/pulpero/core/managers/tool/: create_file.lua  find_file.lua  get_file.lua  manager.lua  search_code.lua  tool.lua  tools.lua  web_search.lua
lua/pulpero/core/router/: router.lua
lua/pulpero/core/runner/model/: model_runner.lua  parser.lua  prompts.lua
lua/pulpero/core/socket/: methods.lua  setup.lua
lua/pulpero/core/util/: JSON.lua  OSCommands.lua  logger.lua
lua/pulpero/test/: OSCommand.test.lua  check_file_existance.lua  code_data_base.test.lua  create_file_tool.test.lua  find_file_tool.test.lua  get_file_tool.test.lua  history.test.lua  logger.test.lua  model_runner.test.lua  parser.test.lua  router.test.lua  service_client.lua  setup.test.lua  tool_manager.test.lua
lua/pulpero/util/: OSCommands.lua  String.lua
neovim/lua/pulpero/: init.lua  ui.lua
plugin/: autodoc.lua
releases/: version.json
tests/: conftest.py
tests/managers/hints/: test_hints_manager.py
tests/managers/history/: test_history_manager.py
tests/managers/tool/: test_apply_buffer_edit.py  test_create_file.py  test_find_file.py  test_get_file.py  test_get_file_tree.py  test_list_directory.py  test_tool_manager.py  test_update_file.py  test_web_search.py
